# nicewidgets

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: kym_event_db.csv  kym_event_report.csv  radon_report_db.csv
docs/: methods-group-plot.md
examples/: combined_widgets_demo.py  example_script.py  example_script_2.py  sample_roi_image_widget.py
notebooks/: group_plot.ipynb  intv_stats.ipynb  plot_pool_marimo.py  swarm_plot_summary.ipynb
notebooks/__marimo__/session/: plot_pool_marimo.py.json
sandbox/: custom_grid_row_select.py
scripts/: install-git-hooks.sh
src/nicewidgets/: __init__.py
src/nicewidgets/aggrid_gold_standard/: __init__.py  aggrid_right_demo.py  gold_standard_aggrid.py  gold_standard_aggrid_v2.py
src/nicewidgets/assets/: aggrid_theme.css  registry.py
src/nicewidgets/contrast_widget/: __init__.py  colorscales.py  contrast_widget.py  histogram.py  theme.py
src/nicewidgets/custom_ag_grid/: README.md  __init__.py  config.py  custom_ag_grid.py  custom_ag_grid_v2.py  grid.py  js_hooks.py  run_grid.py  test_custom_ag_grid_v2.py  theme.py
src/nicewidgets/custom_ag_grid_v3/: config.py  custom_ag_grid_v3.py  demo_custom_ag_grid_v3_app.py  demo_custom_ag_grid_v3_event_bus.py  demo_custom_ag_grid_v3_tutorial.py  js_hooks_v3.py  styles.py  styles_v3.py  theme.py  theme_v3.py
src/nicewidgets/plot_pool_app/: IMPLEMENTATION_PLAN.md  __init__.py  demo_df_table_app.py  demo_pool_app.py  header.py  plot_pool_app.py  schema.py  toolbar.py
src/nicewidgets/plot_pool_widget/: __init__.py  dataframe_processor.py  dataframe_table_view.py  demo_pool_app.py  figure_generator.py  lazy_section.py  plot_helpers.py  plot_pool_controller.py  plot_state.py  plot_summary.py  pool_control_panel.py  pool_plot_config.py  pre_filter_conventions.py  selection_handler.py  test_plot_controller.py
src/nicewidgets/roi_image_widget/: +old_session.py  __init__.py  roi_image_widget.py  viewport.py
src/nicewidgets/upload_widget/: __init__.py  normalize.py  pairing.py  (+3 more)
tests/: test_pandas_polars_conversion.py
tests/contrast_widget/: __init__.py  conftest.py  test_contrast_widget.py
tests/custom_ag_grid/: test_column_defs.py  test_config_and_conversion.py  test_custom_ag_grid_v2.py  test_no_mpl_import.py  test_pandas_polars_conversion.py
tests/plot_pool_app/: __init__.py  conftest.py  test_plot_pool_app.py  test_schema.py
tests/plot_pool_widget/: conftest.py  test_dataframe_processor.py  test_plot_controller.py  test_plot_state.py  test_pre_filter_conventions.py  test_swarm_plotly_vs_swarm_stats.py
tests/roi_image_widget/: test_roi_image_widget.py
tests/upload_widget/: conftest.py  test_cancel_token.py  test_normalize.py  test_pairing.py  test_widget_smoke.py
tests/utils/: __init__.py  test_lazy_section.py
(+13 files in other folders)
