[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nicewidgets"
version = "0.1.0"
description = "Reusable NiceGUI widgets including AG Grid wrappers and ROI image tools."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"

# Keep this in sync with whatever license file you actually add.
license = { file = "LICENSE" }

authors = [
    { name = "Robert H. Cudmore", email = "robert.cudmore@gmail.com" },
]

keywords = [
    "nicegui",
    "widgets",
    "aggrid",
    "image-analysis",
    "gui",
    "webgui",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
]

# --- Core runtime deps ---
dependencies = [
    "nicegui==3.7.1",  #3.6.0",
    "pywebview>=6.1",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    # "matplotlib>=3.7.0",
    "platformdirs",
]

[project.optional-dependencies]
# Full install with all features (includes matplotlib for roi_image_widget)
mpl = [
    "matplotlib>=3.7.0",
]

# Minimal install without matplotlib (for kymflow)
no_mpl = [
    # Empty - just uses core dependencies
    # This extra exists for explicit "no matplotlib" intent
]

# Optional for running examples
examples = [
    "scipy>=1.11.0",
]

# Marimo notebooks (e.g. plot_pool_marimo.py)
marimo = [
    "marimo>=0.15",
]

# Testing, docs, dev tooling
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23",
]
dev = [
    "pre-commit",
    "black",
    "ruff",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/nicewidgets"]

[tool.hatch.build.targets.wheel.include]
"src/nicewidgets/assets/**" = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "requires_nicegui: tests that need NiceGUI UI context",
]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/mapmanager/nicewidgets"
Repository = "https://github.com/mapmanager/nicewidgets"
Issues = "https://github.com/mapmanager/nicewidgets/issues"
Documentation = "https://github.com/mapmanager/nicewidgets#readme"
